# tempo

./: camel.py  deep.py
website1/: we.html  (+1 more)
week02/week02_project/: .gitignore  pyproject.toml  requirements.txt  week02.py  wekk01_refactor.py
week03/week03_project/eda_dashboard/: .gitignore  environment.yml  pyproject.toml  requirements.txt
week03/week03_project/eda_dashboard/3venv/conda-meta/: aom-3.6.0-h6a678d5_0.json  asttokens-3.0.0-pyhd8ed1ab_1.json  blas-1.0-openblas.json  bottleneck-1.4.2-py312ha883a20_0.json  brotli-python-1.0.9-py312h6a678d5_9.json  ca-certificates-2025.8.3-hbd8a1cb_0.json  cairo-1.18.4-h44eff21_0.json  comm-0.2.3-pyhe01879c_0.json  contourpy-1.3.1-py312hdb19cb5_0.json  cycler-0.11.0-pyhd3eb1b0_0.json  dav1d-1.2.1-h5eee18b_0.json  debugpy-1.8.11-py312h6a678d5_0.json  decorator-5.2.1-pyhd8ed1ab_0.json  exceptiongroup-1.3.0-pyhd8ed1ab_0.json  executing-2.2.1-pyhd8ed1ab_0.json  expat-2.7.1-h6a678d5_0.json  fontconfig-2.14.1-h55d465d_3.json  fonttools-4.55.3-py312h5eee18b_0.json  freetype-2.13.3-h4a9f257_0.json  fribidi-1.0.10-h7b6447c_0.json  graphite2-1.3.14-h295c915_1.json  harfbuzz-10.2.0-hdfddeaa_1.json  history  icu-73.1-h6a678d5_0.json  importlib-metadata-8.7.0-pyhe01879c_1.json  ipykernel-6.30.1-pyh82676e8_0.json  ipython-9.5.0-pyhfa0c392_0.json  ipython_pygments_lexers-1.1.1-pyhd8ed1ab_0.json  (+86 more)
week03/week03_project/eda_dashboard/notebooks/: eda_dashboard.ipynb
week03/week03_project/eda_dashboard/reports/: duplicates_report.csv  missing_values_report.csv  summary_report.csv
week03/week03_project/eda_dashboard/src/: file_utils.py
(+475 files in other folders)
